--- a/app/views/badges/new.haml
+++ b/app/views/badges/new.haml
@@ -1,7 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      New Badge
-  .container-fluid
-    .row-fluid
-      = render 'form'
+%h1 New Badge
+
+= render 'form'
