--- a/app/views/closures/new.haml
+++ b/app/views/closures/new.haml
@@ -1,7 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      New Closure
-  .container-fluid
-    .row-fluid
-      = render 'form'
+%h1 Report Closure
+
+= render 'form'
