--- a/app/views/courses/_form.haml
+++ b/app/views/courses/_form.haml
@@ -1,19 +1,18 @@
 = content_for :model_name, Course.name.underscore.to_sym
-= javascript_include_tag "markdown"
-
-= errors_for(@course)
+= javascript_include_tag 'markdown'
 
 = form_for [@department, @course] do |f|
-  .form-group
-    = f.label :name
-    = f.text_field :name, placeholder: "Name", class: "form-control"
-  .form-group
-    = f.label :course_id
-    = f.number_field :course_id, placeholder: "Course ID", class: "form-control"
+  .form-row
+    .form-group.col-md-2
+      = f.label :course_id
+      = f.number_field :course_id, placeholder: 'Course ID', class: 'form-control'
+    .form-group.col-md-10
+      = f.label :name
+      = f.text_field :name, placeholder: 'Name', class: 'form-control'
   .form-group
     = f.label :summary
-    = f.text_field :summary, placeholder: "Short Description", class: "form-control"
+    = f.text_field :summary, placeholder: 'Short Description', class: 'form-control'
   .form-group
     = f.label :markdown
-    ~ f.text_area :markdown, placeholder: "Content", rows: 10, class: "form-control markdown"
-  = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+    ~ f.text_area :markdown, placeholder: 'Content', rows: 10, class: 'form-control markdown'
+  = f.submit 'Save', class: 'btn btn-success'
