--- a/app/views/partials/_header.haml
+++ b/app/views/partials/_header.haml
@@ -3,6 +3,6 @@
     .d-flex.align-items-center
       = link_to root_path do
         = svg 'logo'
-    %p
-      = fa_icon 'phone'
+    %p.my-2
+      = fa_icon 'mobile-alt'
       = t('contact.phone')
