--- a/app/views/partials/nav/_day_indicator.haml
+++ b/app/views/partials/nav/_day_indicator.haml
@@ -2,7 +2,7 @@
   = link_to "javascript:;", class: 'nav-link day', tabindex: 0, role: :button, "data-trigger" => :focus, title: "Period Schedule", "data-content" => "#{render 'partials/nav/dynamic_schedule'}", "data-html" => :true, "data-placement" => :bottom , "data-toggle" => :popover, "data-container" => :nav do
     .badge.badge-light.p-2
       - unless @current_day.color == 'No Color'
-        = fa_icon "#{@current_day.color == "Red Day" ? "map-o" : "map"}"
+        = fa_icon 'map'
         Today is a
         = @current_day.color
       - else
