--- a/app/views/permissions/policies/_form.haml
+++ b/app/views/permissions/policies/_form.haml
@@ -9,5 +9,5 @@
   = f.label :priority
   = f.number_field :priority, class: 'form-control'
 
-  = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+  = f.submit "Save", class: "btn btn-success pull-right"
 
