--- a/app/views/activities/edit.haml
+++ b/app/views/activities/edit.haml
@@ -1,11 +1,5 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      Edit
-      %span.light
-        = @activity.name
-        Club
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to 'Back',  activity_path(@activity), class: "btn btn-warning pull-right"
+%h1
+  Edit
+  = @activity.type.capitalize
+
+= render 'form'
