--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -1,17 +1,15 @@
-= errors_for(@badge)
-
 = form_for @badge do |f|
   .form-group
     = f.label :name
-    = f.text_field :name, class: "form-control"
+    = f.text_field :name, class: 'form-control'
   .form-group
-    = f.label :color, "Hex Color (e.g f1f1f1)"
-    = f.text_field :color, class: "form-control"
+    = f.label :color, 'Hex Color'
+    = f.text_field :color, placeholder: 'F1F1F1', class: 'form-control'
   .form-group
     = f.label :icon
-    = f.text_field :icon, class: "form-control fontawesome-picker"
+    = f.text_field :icon, class: 'form-control fontawesome-picker'
 
-  = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+  = f.submit 'Save', class: 'btn btn-success'
 
 :javascript
   $('.fontawesome-picker').iconpicker();
