--- a/app/views/bulletins/edit.haml
+++ b/app/views/bulletins/edit.haml
@@ -1,8 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      Edit Bulletin
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to 'Back', bulletins_path, class: "btn btn-warning pull-right"
+%h1 Edit Bulletin
+
+= render 'form'
