--- a/app/views/closures/edit.haml
+++ b/app/views/closures/edit.haml
@@ -1,8 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      Edit Closure
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to "Delete", closure_path(@closure), method: :delete, class: "btn btn-warning pull-right"
+%h1 Edit Closure
+
+= render 'form'
