--- a/app/views/courses/edit.haml
+++ b/app/views/courses/edit.haml
@@ -1,8 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      Edit Course
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to 'Back',  @announceable, class: "btn btn-warning pull-right"
+%h1 Edit Course
+
+= render 'form'
