--- a/app/views/departments/_form.haml
+++ b/app/views/departments/_form.haml
@@ -1,21 +1,18 @@
 = content_for :model_name, Department.name.underscore.to_sym
-
-= javascript_include_tag "markdown"
-
-= errors_for(@department)
+= javascript_include_tag 'markdown'
 
 = form_for @department do |f|
   .form-group
     = f.label :name
-    = f.text_field :name, placeholder: "Name", class: "form-control"
+    = f.text_field :name, placeholder: 'Name', class: 'form-control'
   .form-group
     = f.label :type
-    = f.select :type, ['instructional', 'administrative']
+    = f.select :type, [['Instructional', 'instructional'], ['Administrative', 'administrative']], {}, class: 'form-control'
   .form-group
     = f.label :summary
-    = f.text_field :summary, placeholder: "Short Description", class: "form-control"
+    = f.text_field :summary, placeholder: 'Short Description', class: 'form-control'
   .form-group
     = f.label :markdown
-    ~ f.text_area :markdown, placeholder: "Content", rows: 10, class: "form-control markdown"
+    ~ f.text_area :markdown, placeholder: 'Content', rows: 10, class: 'form-control markdown'
 
-  = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+  = f.submit 'Save', class: 'btn btn-success'
