--- a/app/views/departments/new.haml
+++ b/app/views/departments/new.haml
@@ -1,9 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      New
-      %span.light Department
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to 'Back',  departments_path, class: "btn btn-warning pull-right"
+%h1 New Department
+
+= render 'form'
