--- a/app/views/links/new.haml
+++ b/app/views/links/new.haml
@@ -1,8 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      New Link
-  .container-fluid
-    .row-fluid
-      = render 'form'
-      = link_to 'Back',  @announceable, class: "btn btn-warning pull-right"
+%h1 New Link
+
+= render 'form'
