--- a/app/views/periods/_form.haml
+++ b/app/views/periods/_form.haml
@@ -1,11 +1,12 @@
 = form_for [:user, @period] do |f|
   .form-group
     = f.label :period
-    = f.number_field :period, placeholder: "Period Number", class: "form-control"
+    = f.number_field :period, placeholder: 'Period Number', class: 'form-control'
   .form-group
     = f.label :course
-    = f.collection_select :course, @courses, :id, :name, class: "form-control"
+    = f.collection_select :course, @courses, :id, :name, {}, class: 'form-control'
   .form-group
     = f.label :room
-    = f.text_field :room, placeholder: "Room", class: "form-control"
-  = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+    = f.text_field :room, placeholder: 'Room', class: 'form-control'
+
+  = f.submit 'Save', class: 'btn btn-success'
