--- a/app/views/promotions/new.haml
+++ b/app/views/promotions/new.haml
@@ -1,7 +1,3 @@
-%section.section.section-padded
-  .section-header
-    %h3
-      New Promotion
-  .container-fluid
-    .row-fluid
-      = render 'form'
+%h1 New Promotion
+
+= render 'form'
