--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -1,27 +1,24 @@
-= errors_for(@user)
 = content_for :model_name, User.name.underscore.to_sym
 = content_for :model_id, @user.id
-= javascript_include_tag "markdown"
+= javascript_include_tag 'markdown'
 
 = form_for @user do |f|
   - if Current.user&.can? :edit, User
     .form-group
       = f.label :name
-      = f.text_field :name, placeholder: "Name", class: "form-control"
+      = f.text_field :name, placeholder: 'Name', class: 'form-control'
     .form-group
       = f.label :badge
-      = f.select :badge, options_for_select(Badge.all.collect {|b|[b.name,b.id]}, @user.badge&.id), include_blank: true
+      = f.select :badge, options_for_select(Badge.all.collect {|b|[b.name,b.id]}, @user.badge&.id), include_blank: true, class: 'form-control'
   .form-group
     = f.label :picture
-    = f.file_field :picture, class: "form-control-file"
+    = f.file_field :picture, class: 'form-control-file'
   .form-group
     = f.label :bio
-    ~ f.text_area :bio, placeholder: "Bio", class: "form-control markdown"
+    ~ f.text_area :bio, placeholder: 'Bio', class: 'form-control markdown'
   - if Current.user&.admin_enabled?
     .form-group
       = f.label :super_admin
       = f.check_box :super_admin
   .btn-group
-    = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
-    - if Current.user&.can? :view, User
-      = link_to 'Back', users_path, class: 'btn btn-primary'
+    = f.submit 'Save', class: 'btn btn-success'
