Migrate outdated views to BS4

--- a/app/views/bulletins/index.haml
+++ b/app/views/bulletins/index.haml
@@ -1,6 +1,6 @@
 .d-flex.justify-content-between
   %h1 Morning Announcements
-  = render partial: "partials/modtools", locals: {actions: @actions}
+  = render partial: 'partials/modtools', locals: {actions: @actions}
 
 %table.table.table-hover
   %thead
