--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -54,7 +54,7 @@
         %input.course-search.form-control{type: 'text', placeholder: 'Search courses'}
         %table.table.table-hover
           %tbody
-            - @department.courses.each_with_index do |course, index|
+            - @department.courses.order_by(name: :asc).each_with_index do |course, index|
               %tr.course{data: {name: course.name, course_id: course.course_id}, class: index > 8 ? 'd-none' : ''}
                 %td= link_to course.name.truncate(50), course
             %tr
