Display admin badge on users#index

--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -18,7 +18,7 @@
           = render 'badges/badge', badge: user.badge
           &nbsp;
           - if user.super_admin
-            = fa_icon 'shield'
+            = fa_icon 'shield-alt'
           - if user.bot
             = fa_icon 'certificate'
         %td= user.email
