Add school address to website header, closes #104

--- a/app/views/partials/_header.haml
+++ b/app/views/partials/_header.haml
@@ -6,3 +6,6 @@
     %p.my-2
       = fa_icon 'mobile-alt'
       = t('contact.phone')
+      %br
+      = fa_icon 'map-marker'
+      = t('contact.address')
